--- a/views/secondHand/secondHandCart.ejs
+++ b/views/secondHand/secondHandCart.ejs
@@ -46,14 +46,14 @@
                   <img src="<%= item.product.imageUrl %>" alt="<%= item.product.title %>">
                 </td>
                 <td><%= item.product.title %></td>
-                <td>$<%= item.product.price.toFixed(2) %></td>
+                <td>₹<%= item.product.price.toFixed(2) %></td>
                 <td>
                   <form action="/secondHand/cart/update/<%= item.product._id %>" method="POST">
                     <input type="number" name="quantity" value="<%= item.quantity %>" min="1" max="<%= item.product.quantity %>" class="quantity-input">
                     <button type="submit">Update</button>
                   </form>
                 </td>
-                <td>$<%= totalPrice.toFixed(2) %></td>
+                <td>₹<%= totalPrice.toFixed(2) %></td>
                 <td>
                   <form action="/secondHand/cart/delete-item/<%= item.product._id %>" method="POST">
                     <button type="submit" class="delete-button" style="background-color: black; color: white;">Delete</button>
@@ -69,7 +69,7 @@
         </tbody>
       </table>
       <div class="cart-total">
-        Grand Total: $<%= grandTotal.toFixed(2) %>
+        Grand Total: ₹<%= grandTotal.toFixed(2) %>
       </div>
       <div style="clear: both;"></div>
       <button class="checkout-button">Proceed to Checkout</button>
