--- a/views/subscriptionSwapping/verify-credentials.ejs
+++ b/views/subscriptionSwapping/verify-credentials.ejs
@@ -7,9 +7,11 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/chatbot.css">
+  <link rel="stylesheet" href="/css/rentalStyles.css">
   <link rel="icon" type="image/png" href="/assets/logo2.png">
 
   <style>
+
     .alert-error {
       color: #721c24;
       background-color: #f8d7da;
@@ -18,7 +20,25 @@
       margin: 20px 0;
       border-radius: 4px;
     }
+
+    .form-control label{
+      font-size: large;
+      margin: 40px auto 15px;
+    }
+
+    .form-control input{
+      width: 90%; 
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      text-align: center;
+      font-size: 20px;
+      margin: 0 auto 10px;
+    }
+
   </style>
+
+  
   <script>
     function handleSkip() {
       // Create a new form dynamically and disable validation
@@ -45,7 +65,7 @@
   <%- include('../common/chatbot.ejs') %>
   <main>
     <form class="credentials-form" action="/subscription/verify-credentials" method="POST">
-      <h2>Verify Platform Credentials</h2>
+      <h1>Verify Platform Credentials</h1><br>
       <% if (action === 'update') { %>
         <input type="hidden" name="productId" value="<%= productId %>" />
       <% } %>
@@ -57,11 +77,11 @@
         <label for="password">Account Password</label>
         <input type="password" name="password" id="password" <%= action === 'verify' ? 'required' : '' %>>
       </div>
-      <div class="button-group">
-        <button type="submit" name="action" value="verify" class="btn-primary">
+      <div class="button-group" style="align-items: center;">
+        <button type="submit" name="action" value="verify" class="btn-primary" style="margin: 40px 50px; background: linear-gradient(135deg, #44a559, #3c6d47);">
           Verify Credentials
         </button>
-        <button type="button" onclick="handleSkip()" class="btn-secondary">
+        <button type="button" onclick="handleSkip()" class="btn-secondary" style="margin: 40px 50px; background: linear-gradient(135deg, #a7a7a7, #4c4c4c);">
           Skip for Now
         </button>
       </div>
