--- a/views/secondHand/secondHandHome.ejs
+++ b/views/secondHand/secondHandHome.ejs
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= pageTitle %></title>
     <link rel="stylesheet" href="/css/chatbot.css">
-    <!-- <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/product.css"> -->
+    <!-- <link rel="stylesheet" href="/css/main.css"> -->
+    <link rel="stylesheet" href="/css/product.css">
     <link rel="stylesheet" href="/css/rentalStyles.css">
     <link rel="icon" type="image/png" href="/assets/logo2.png">
 
